--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,24 @@
 version: "3"
 services:
+  gokeeper:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - JWT_SIGNKEY='my_secret_key'
+      - ACCESS_KEYID='RPClJMVJmUJyRF2PgZSK'
+      - SECRET_ACCESSKEY='qJa8Bl0VHixgkDoymsJC7yEgb88nPTUQsZNLPUBM'
+      - DATABASE_HOST=postgres
+      - DATABASE_PORT=5432
+      - DATABASE_USER=postgres
+      - DATABASE_PASSWORD=password
+      - DATABASE_NAME='postgres'
+      - ADDRESS=0.0.0.0:8080
+    ports:
+      - "8080:8080"
+    volumes:
+      - "./keys:/app/keys"
+
   postgres:
     restart: unless-stopped
     image: postgres:latest
@@ -9,6 +28,7 @@ services:
       - "postgres-data:/var/lib/postgresql/data"
     environment:
       - "POSTGRES_PASSWORD=password"
+
   minio:
     image: minio/minio:latest
     command: minio server --console-address ":9001" /home/shared
