--- a/.github/workflows/release-client.yml
+++ b/.github/workflows/release-client.yml
@@ -19,7 +19,7 @@ jobs:
         uses: thatisuday/go-build-action@v1
         with:
           platforms: "linux/amd64, darwin/amd64, windows/amd64"
-          package: "..."
+          package: "cmd/client/main.go"
           name: "keeper"
           compress: "true"
           dest: "dist"
