--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-JWT_SIGNKEY=my_secret_key
+SIGNKEY=my_secret_key
 ACCESS_KEYID=AAAAAAAAAAAAAAAAAAAA
 SECRET_ACCESSKEY=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB
 DATABASE_PORT=5433
