--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
 
   postgres:
     restart: unless-stopped
-    image: postgres:latest
+    image: postgres:16
     ports:
       - "5433:5432"
     volumes:
